erDiagram
    users {
        BIGINT id PK "NOT NULL"
        NVARCHAR(100) username UK "NOT NULL"
        NVARCHAR(255) email UK "NOT NULL"
        NVARCHAR(500) password_hash "NULL"
        DATETIME2 email_verified_at "NULL"
        BIT is_active "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        DATETIME2 last_login_at "NULL"
        DATETIME2 deleted_at "NULL"
        INT role_id FK "NOT NULL"
    }
    roles {
        INT id PK "NOT NULL"
        NVARCHAR(50) role_name UK "NOT NULL"
    }
    posts {
        BIGINT id PK "NOT NULL"
        BIGINT author_id FK "NOT NULL"
        NVARCHAR(20) post_type "NOT NULL"
        NVARCHAR(255) title "NOT NULL"
        NVARCHAR(MAX) content "NULL"
        NVARCHAR(20) meal_type "NULL"
        INT prep_time_mins "NULL"
        INT cooking_time_mins "NULL"
        INT servings "NULL"
        DECIMAL(10_2) calories_per_serving "NULL"
        NVARCHAR(30) diet_type "NULL"
        BIT ingredients_verified "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        BIGINT view_count "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 deleted_at "NULL"
    }
    categories {
        INT id PK "NOT NULL"
        NVARCHAR(100) name "NOT NULL"
        NVARCHAR(120) slug UK "NOT NULL"
        NVARCHAR(20) category_type "NOT NULL"
        NVARCHAR(20) post_category_kind "NULL"
        BIT is_active "NOT NULL"
    }
    comments {
        BIGINT id PK "NOT NULL"
        BIGINT post_id FK "NOT NULL"
        BIGINT user_id FK "NOT NULL"
        BIGINT parent_comment_id FK "NULL"
        NVARCHAR(1000) content "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 updated_at "NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 deleted_at "NULL"
    }
    shops {
        BIGINT id PK "NOT NULL"
        BIGINT suggested_by_user_id FK "NULL"
        NVARCHAR(255) google_place_id "NULL"
        NVARCHAR(255) name "NOT NULL"
        NVARCHAR(1000) address "NULL"
        DECIMAL(10_7) latitude "NULL"
        DECIMAL(10_7) longitude "NULL"
        BIT is_approved "NOT NULL"
        BIT is_deleted "NOT NULL"
        DATETIME2 created_at "NOT NULL"
    }
    shop_categories {
        BIGINT shop_id PK,FK "NOT NULL"
        INT category_id PK,FK "NOT NULL"
    }
    flags {
        BIGINT id PK "NOT NULL"
        BIGINT reporter_id FK "NULL"
        BIGINT post_id FK "NULL"
        BIGINT comment_id FK "NULL"
        BIGINT shop_id FK "NULL"
        NVARCHAR(500) reason "NOT NULL"
        NVARCHAR(20) status "NOT NULL"
        BIGINT resolved_by_admin_id FK "NULL"
        NVARCHAR(2000) resolution_note "NULL"
        DATETIME2 created_at "NOT NULL"
        DATETIME2 resolved_at "NULL"
        NVARCHAR(10) source_type "NOT NULL"
        NVARCHAR(100) ai_model_name "NULL"
    }
    roles ||--|{ users : "has_role"
    users ||--|{ posts : "authors"
    posts ||--|{ comments : "comment_on"
    users ||--|{ comments : "writes"
    comments ||--|{ comments : "reply_to"
    users ||--|{ shops : "suggests_shop"
    shops ||--|{ shop_categories : "shop_classification"
    categories ||--|{ shop_categories : "shop_category"
    users ||--|{ flags : "reports"
    posts ||--|{ flags : "reported_post"
    comments ||--|{ flags : "reported_comment"
    shops ||--|{ flags : "reported_shop"
    users ||--|{ flags : "resolves"
